Fixed definition list spacing between lines

--- a/src/components/inline-elements/definition-list/definition-list.demo.css
+++ b/src/components/inline-elements/definition-list/definition-list.demo.css
@@ -11,3 +11,7 @@ dt {
 dd {
     padding-left: var(--margin-s);
 }
+
+dl > dt + dd {
+    margin-bottom: calc(var(--margin-s) / 2);
+}
